common css for buttons

--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -22,13 +22,14 @@ h3{
 .candidate-lbl{
 	width:50px;
 }
-
+/*
 .btn-action{
 	margin-right:10px;
     min-width:90px;
     margin-bottom:5px;
     margin-top:5px;
 }
+*/
 /*
 .modal-header{
      background:#181414;
