--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -57,13 +57,14 @@
     min-width:50px;
 }
 
-
+/*
 .btnRight{
 	margin-top:20px;
     margin-bottom:20px;
     margin-right:10px;
     min-width:100px;
 }
+*/
 
 .listing-nav{
 	cursor:pointer;
