--- a/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
+++ b/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
@@ -3,7 +3,7 @@
 <div class="container-div">
 	
 	<div class="action-buttons">
-		<button class="btn btn-secondary btn-listing" routerLink="/suggestions">Back</button>
+		<button class="btn btn-secondary arenella-btn" routerLink="/suggestions">Back</button>
 	</div>
 	<div *ngIf="!hasAlerts()">
 		<h1>Search Alerts</h1>
