--- a/recruit-gui/src/app/candidate-info-box/candidate-info-box.component.html
+++ b/recruit-gui/src/app/candidate-info-box/candidate-info-box.component.html
@@ -8,7 +8,7 @@
 			</div>
        	</div>
        	<div>
-       		<button *ngIf="config.showContactButton()" class="btn btn-secondary action-btn main-action_btn main-btns main-btn contact-button"  (click)="openContatBox()">Contact</button>
+       		<button *ngIf="config.showContactButton()" class="btn btn-secondary arenella-btn contact-button"  (click)="openContatBox()">Contact</button>
 	   	</div>
        	<div *ngFor="let infoItem of config.getItems()" class="left-box">
        		<h5>{{infoItem.getTitle()}}</h5>
