--- a/recruit-gui/src/app/email/email.component.css
+++ b/recruit-gui/src/app/email/email.component.css
@@ -47,18 +47,6 @@ tr:nth-child(even){
   background-color: #e8e8e8;
 }
 
-.action-buttons{
-	text-align:right;
-}
-
-.action-btn{
-	width:140px;
-	margin-top:5px;
-	margin-left:5px;
-	padding-left:0px;
-	padding-right:5px;
-} 
-
 .tab-nav{
 	cursor:pointer;
 }
@@ -141,25 +129,7 @@ tr:nth-child(even){
 .no-emails{
 	text-align:center;
 }
-/*
-.modal-body{
-    font-size: large;
-    height:400px;
-    text-align: center;
-}
-*/
-/*
-.modal-title{
-	margin-left:20px;
-}
-*/
-/*
-.modal-header{
-     background:#181414;
-     color:#6A5ACD;
-     font-weight:bold;
-}
-*/
+
 .modal-body textarea{
 	width:100%;
 	height:310px;
@@ -174,4 +144,8 @@ tr:nth-child(even){
 	min-height:200px;
 	margin-top:50px;
 	height:150px;
+}
+
+.email-table{
+	margin-top:20px;
 }
