--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -4,12 +4,13 @@
 	<div class="nav-tabs-bar"></div>
 	
 		<div class='page-body'>
-			<div *ngIf="currentView == 'add'" class="container-div page {{mobilePage}}">
+			<div *ngIf="currentView == 'add'">
 						
-				<div class="action-buttons button-panel-mobile">
-					<button class="btn btn-secondary btnRight main-btns {{mobileBtnClass}}" (click)="showOfferedCandidates()" *ngIf="showBackBtn">Back</button>
-					<button class="btn btn-secondary btnRight main-btns {{mobileBtnClass}}" (click)="addCandidate()">Publish</button>
+				<div class="action-buttons">
+					<button class="btn btn-secondary arenella-btn {{mobileBtnClass}}" (click)="showOfferedCandidates()" *ngIf="showBackBtn">Back</button>
+					<button class="btn btn-secondary arenella-btn {{mobileBtnClass}}" (click)="addCandidate()">Publish</button>
 				</div>
+				
 				<form [formGroup]="offeredCandidateFormBean">
 					<table class="table new-user-table">
 						<tr>
@@ -266,7 +267,7 @@
 					<td class="pendingCandidateBox-td" (click)="loadPendingCandidate(pendingCandidate)">{{pendingCandidate.firstname}}</td>
 					<td class="pendingCandidateBox-td" (click)="loadPendingCandidate(pendingCandidate)">{{pendingCandidate.surname}}</td>
 					<td class="pendingCandidateBox-td">
-						<button class="btn btn-secondary action-btn" style="width:60px;" (click)="deletePendingCurriculum(pendingCandidate, false)">Delete</button>
+						<button class="btn btn-secondary arenella-btn" style="width:60px;" (click)="deletePendingCurriculum(pendingCandidate, false)">Delete</button>
 					</td>	
 				</tr>
 			</tbody>
