--- a/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
+++ b/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
@@ -3,7 +3,7 @@
 	
 		<!-- Action Buttons -->
 		<div class="action-buttons">
-			<button class="btn btn-secondary btnRight" (click)="refreshData()">Refresh</button>
+			<button class="btn btn-secondary arenella-btn" (click)="refreshData()">Refresh</button>
 		</div>
 	
 		<!-- Menu -->
