--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -29,7 +29,7 @@
 	
 			<!-- Action buttons -->
 			<div class="action-buttons">
-				<button class="btn btn-secondary btnRight" (click)="refreshData()" download>Refresh</button>
+				<button class="btn btn-secondary arenella-btn" (click)="refreshData()" download>Refresh</button>
 			</div>
 				
 			<!--  Define charts -->
@@ -58,8 +58,8 @@
 					</div>
 					<!-- New Candidate Stats -->
 					<div class="action-buttons" *ngIf="showNewCandidates">
-						<button class="btn btn-secondary btnRight stat-btn" (click)="loadNewCandidates()" 		download>Show New Candidates</button>
-						<button class="btn btn-secondary btnRight stat-btn" (click)="loadNewCandidateStats()" 	download>Show New Candidate Stats</button>
+						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidates()" 		download>Show New Candidates</button>
+						<button class="btn btn-secondary arenella-btn" (click)="loadNewCandidateStats()" 	download>Show New Candidate Stats</button>
 					</div>	
 					<div class="statChartDiv {{statChartDivMobile}}">
 						<canvas  id="leftChart" >{{ leftChart }}</canvas>	
