--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -50,11 +50,12 @@
 	float:right;
 }
 
+/**
 .btn-action{
 	margin-top:5px;
 	margin-right:10px;
 	min-width:150px;
-}
+}*/
 
 .selected-skill{
 	margin:2px;
@@ -184,35 +185,35 @@
 	margin-right:2%;
 	margin-bottom:2%;
 }
-
+/*
 .button-panel-mobile{
 	width:100%;
 	display:inline-block;
-}
-
+}*/
+/*
 .main-btn {
     width: 155px;
     margin-right: 10px;
     margin-bottom: 10px;
     margin-top: 5px;
     margin-right:10px;
-}
-
+}*/
+/*
 .btnRight{
 	margin-top:10px;
 	margin-bottom:10px;
 	margin-right:10px;
 	min-width:100px;
 	float:right;
-}
-
+}*/
+/*
 .buttons-icon-mobile{
 	width:48%;
 	margin-top: 10px;
     margin-right:1%;
     margin-left:1%;
     margin-bottom:0px;
-}
+}*/
 
 .candidate-suggestion-table > .table th, .table td {
 	padding: 0.75rem;
