--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -69,13 +69,13 @@
 	color:blue;
 	font-style:italic;
 }
-
+/*
 .main-btns{
 	width:155px;
 	margin-right:10px;
 	margin-bottom:10px;
 	margin-top:5px;
-}
+}*/
 
 .saved-candidate-icon-header{
 	background:#6A5ACD;
