--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -207,3 +207,19 @@ dialog {
 	width:98%;
 	margin: auto;
 }
+/*
+.btnRight{
+	margin-top:10px;
+	margin-bottom:10px;
+	margin-right:10px;
+	min-width:100px;
+}
+*/
+
+.arenella-btn{
+    width: 155px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-right:10px;
+} 
